# project-terminal

./: .gitignore  LICENSE  README.md  README_zh.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  project-terminal-agent-plan.md  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: quality.yml  release.yml
scripts/: bump-version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_dirs.rs  error.rs  lib.rs  main.rs  platform.rs  state.rs  storage.rs
src-tauri/src/agent/: mod.rs  model.rs  repository.rs  runtime.rs
src-tauri/src/commands/: agent.rs  clipboard.rs  daemon.rs  mod.rs  platform.rs  profile.rs  profile_template.rs  project.rs  ssh.rs  terminal.rs
src-tauri/src/daemon/: mod.rs  remote.rs
src-tauri/src/profile/: mod.rs  model.rs  repository.rs  template.rs
src-tauri/src/project/: mod.rs  model.rs  repository.rs
src-tauri/src/ssh/: client.rs  command_builder.rs  mod.rs  model.rs  repository.rs
src-tauri/src/terminal/: conda.rs  escaping.rs  initializer.rs  manager.rs  mod.rs  scrollback.rs  session.rs  wsl.rs
src/i18n/: index.test.ts  index.ts
src/lib/: appCommands.ts  keyboardShortcuts.ts  paneLayout.test.ts  paneLayout.ts  profilePresets.test.ts  profilePresets.ts  profileTemplateIcons.ts  terminalInputQueue.test.ts  terminalInputQueue.ts  terminalOutputQueue.test.ts  terminalOutputQueue.ts  terminalResizeQueue.test.ts  terminalResizeQueue.ts  terminalThemes.test.ts  terminalThemes.ts  (+2 more)
(+49 files in other folders)
